--- a/14sz/Aémafét/01.08_mozi_WFA/mozi-WFA/mozi-WFA/mozi-WFA.csproj
+++ b/14sz/Aémafét/01.08_mozi_WFA/mozi-WFA/mozi-WFA/mozi-WFA.csproj
@@ -33,6 +33,10 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="MySql.Data, Version=8.2.0.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>E:\Program Files (x86)\MySQL\MySQL Connector NET 8.2.0\MySql.Data.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -46,14 +50,35 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Form1.cs">
+    <Compile Include="frmFilm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form1.Designer.cs">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <Compile Include="frmFilm.Designer.cs">
+      <DependentUpon>frmFilm.cs</DependentUpon>
+    </Compile>
+    <Compile Include="frmFilmLista.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmFilmLista.Designer.cs">
+      <DependentUpon>frmFilmLista.cs</DependentUpon>
+    </Compile>
+    <Compile Include="frmMain.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmMain.Designer.cs">
+      <DependentUpon>frmMain.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="frmFilm.resx">
+      <DependentUpon>frmFilm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frmFilmLista.resx">
+      <DependentUpon>frmFilmLista.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frmMain.resx">
+      <DependentUpon>frmMain.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
@@ -62,6 +87,7 @@
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
+      <DesignTime>True</DesignTime>
     </Compile>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
@@ -75,6 +101,23 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="images\delete.png" />
+    <Content Include="images\ember.png" />
+    <Content Include="images\film.png" />
+    <Content Include="images\film2.ico" />
+    <Content Include="images\film2.png" />
+    <Content Include="images\keres.png" />
+    <Content Include="images\kilep.png" />
+    <Content Include="images\ment.png" />
+    <Content Include="images\mozi.ico" />
+    <Content Include="images\mozi.png" />
+    <Content Include="images\mozi2.png" />
+    <Content Include="images\user.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <WCFMetadata Include="Connected Services\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
